--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "ai_workshop",
+  "name": "alarchat",
   "version": "1.0.0",
-  "description": "",
+  "description": "A simple chat application using Socket.IO",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.7.4"
+    "express": "^4.17.1",
+    "socket.io": "^4.3.2"
   }
 }
